fixed overlap

--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,6 @@
   padding: 5%;
   width:33%;
 }
+.carousel-partners{
+  height: 300px;
+}
