--- a/src/css/estiloNavbar.css
+++ b/src/css/estiloNavbar.css
@@ -19,7 +19,7 @@
     background-size: cover;
     height: 100px;
     background-color: black;
-    position: fixed;
+    /*position: fixed;*/
 }
 
 .header .navbar {
